--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "module": "esnext",
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
+    "typeRoots": ["./types", "./node_modules/@types"],
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
